--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <i class="ion-chevron-right icon-big"></i>
                     <h3>Die Geschichte der künstlichen Intelligenz g</h3>
                     <p>
-                        In den 1950er Jahren beschäftigte sich die frühe Forschung zur KI mit Themen wie Problemlösung und symbolischen Methoden
+                       Künstliche Intelligenz (KI) ist ein weitreichender Zweig der Informatik, der sich mit dem Bau intelligenter Maschinen befasst, die Aufgaben ausführen können, die normalerweise menschliche Intelligenz erfordern.
                     </p>
                 </div>
             </div>   
@@ -144,7 +144,7 @@
         
         <section class="section-steps" id="works">
             <div class="row">
-                <h2> &mdash; </h2>
+                <h2>AGI, manchmal auch als "Starke KI" bezeichnet,  &mdash; ist die Art künstlicher Intelligenz, die wir in den Filmen sehen </h2>
             </div>
             <div class="row">
                 <div class="col span-1-of-2 steps-box">
